WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205023
GetByIdVariant::dumpInContext() should not ref UniqueStringImpls.
https://bugs.webkit.org/show_bug.cgi?id=205023
Summary
GetByIdVariant::dumpInContext() should not ref UniqueStringImpls.
Mark Lam
Reported
2019-12-09 11:51:24 PST
... because GetByIdVariant::dumpInContext() may be called from the compiler thread. <
rdar://problem/57747265
>
Attachments
proposed patch.
(1.83 KB, patch)
2019-12-09 11:58 PST
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2019-12-09 11:58:21 PST
Created
attachment 385175
[details]
proposed patch.
WebKit Commit Bot
Comment 2
2019-12-09 12:51:34 PST
Comment on
attachment 385175
[details]
proposed patch. Clearing flags on attachment: 385175 Committed
r253298
: <
https://trac.webkit.org/changeset/253298
>
WebKit Commit Bot
Comment 3
2019-12-09 12:51:36 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug