GetByIdVariant::dumpInContext() should not ref UniqueStringImpls. https://bugs.webkit.org/show_bug.cgi?id=205023 <rdar://problem/57747265>

Reviewed by Saam Barati.

This is because GetByIdVariant::dumpInContext() may be called from the compiler
thread.  GetByIdVariant::dumpInContext() inadvertently invoking the String copy
constructor on an Identifier, which in turn, refs the underlying UniqueStringImpl.
This results in a race against the mutator to adjust the refCount.

The fix is to have GetByIdVariant::dumpInContext() print the underlying
StringImpl instead of the Identifier itself.

* bytecode/GetByIdVariant.cpp:
(JSC::GetByIdVariant::dumpInContext const):


Canonical link: https://commits.webkit.org/218245@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253298 268f45cc-cd09-0410-ab3c-d52691b4dbfc